@@ -10,3 +10,4 @@
 #undef HAVE_TCPWRAPPERS
 #undef HAVE_SHADOW
 #undef HAVE_CRYPT
+#undef HAVE_LIBXINERAMA
