@@ -64,6 +64,7 @@ LockPosition=false
 SetPosition=false
 PositionX=0
 PositionY=0
+XineramaScreen=0
 
 [chooser]
 DefaultHostImg=@pixmapdir@/nohost.png
