@@ -1,3 +1,13 @@
+Thu Feb 01 17:05:54 2001  George Lebl <jirka@5z.com>
+
+	* Apply an port a patch from <tim.jansen@systembureau.com>,
+	  furhter modified default config (config/gdm.conf.in) and the 
+	  configuratior (gui/gdmconfig.c) to include the screen option
+
+	* gui/gdmlogin.c, configure.in: added support for Xinerama, 
+          the new key greeter/XineramaScreen selects on which screen the 
+          greeter will be centered
+
 Thu Feb 01 04:49:11 2001  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in:  Add gdm to the list of default excludes
